@@ -1,0 +1,1 @@
+cdecl @ @ @ struct S { typedef int I; } @ 65
