@@ -22,6 +22,14 @@ C78 is now accepted as an alias for K&RC.
 Added `iconv_t`, `locale_t`, `posix_spawnattr_t`, `posix_spawn_file_actions_t`,
 `regex_t`, `regmatch_t`, and `regoff_t`.
 
+** Nested types in C
+Nested types:
+
+    struct S { typedef int Int; }
+
+are now correctly caught as an error in C.
+
+
 ** Pointer-to-function qualifiers
 A pointer to function with qualifiers, e.g.:
 
